--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body > main > article > button {
   width: 150px;
   border-radius: 1.5em;
   margin-top: 4em;
+  font-weight: bold;
 }
 
 body > main > article > button:hover {
@@ -109,16 +110,12 @@ body > main > .three > button:hover {
   background-color: var(--very-dark-cyan);
 }
 
-footer {
-  margin-bottom: 0;
-}
-
-.attribution {
+footer > .attribution {
   font-size: 11px;
   text-align: center;
 }
 
-.attribution a {
+footer > .attribution a {
   color: #3e52a3;
 }
 
@@ -132,12 +129,9 @@ footer {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  main > button {
-    border-radius: 0;
-  }
   main > .one {
+    border-radius: 0;
     border-top-right-radius: 0.5rem;
-    border-bottom-left-radius: 0rem;
   }
   main > .three {
     border-top-right-radius: 0;
