finished desktop & mobile

--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,7 @@
 body {
   background: var(--very-light-gray);
   font-size: 15px;
+  height: 100vh;
   > main {
     display: flex;
     justify-content: center;
